<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Hoopin</string>
    <string name="welcome_on_hoopin">Welcome On Hoopin</string>
    <string name="good_relationships_make_us_happy_let_s_nourish_them_with_a_simple_hoop">\"Good relationships make us happy.Let\'s nourish them with a simple hoop\"</string>
    <string name="to_create_a_hoop_a_host_will_have_to_provide_information_about_4_w">To create a hoop, a host will have to provide information about 4 W.</string>
    <string name="what_where_when_who">What Where When Who</string>
    <string name="get_started">Get Started</string>
    <string name="a_circle_is_a_group_of_friends_sharing_similar_interests_a_hoop_can_be_created_within_a_circle_the_user_that_creates_the_circle_is_the_admin_by_default">A circle is a group of friends sharing similar interests.A hoop can be created within a circle. The user that creates the circle is the admin by default.</string>
    <string name="create_a_hoop">Create a hoop</string>
    <string name="create_a_circle">Create a circle</string>
    <string name="getting_started">Getting Started</string>
    <string name="sign_in">Log in</string>
    <string name="sign_in2">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="there_are_many_variation_of_passages_of_lorm_ipsum_available_but_the_majority_have_suffered">There are many variation of passages of Lorm Ipsum available,but the majority have suffered.</string>
    <string name="sign_in_with_facebook">Sign in with facebook</string>
    <string name="or">OR</string>
    <string name="sign_in_to_continue">Log in to join hoops</string>
    <string name="share_moments_together">Share Moments Together</string>
    <string name="share_memory_together">Share Memory Together</string>
    <string name="email_id">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forgot your password? Get help signing in</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up1">Sign up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_up_to_continue">Join Hoopin</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what">What</string>
    <string name="title">Title</string>
    <string name="description1">Description</string>
    <string name="optional">(optional)</string>
    <string name="copy_from_past_hoops">COPY FROM PAST HOOPS</string>
    <string name="next">NEXT</string>
    <string name="when">When</string>
    <string name="start_date_amp_time"><![CDATA[Start Date & Time]]></string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="end_date_amp_time_optional"><![CDATA[End Date and Time]]></string>
    <string name="create_hoop">Create Hoop</string>
    <string name="location">Location</string>
    <string name="where">Where</string>
    <string name="create">CREATE</string>
    <string name="who">Who</string>
    <string name="_25_member_invited">25 Member Invited</string>
    <string name="select_date_and_time">Start Date and Time</string>
    <string name="recover_email">Recover Email?</string>
    <string name="recoveremail">Recover Email</string>
    <string name="question">Question</string>
    <string name="enter_question">Enter Question</string>
    <string name="answer">Answer</string>
    <string name="enter_answer">Enter Answer</string>
    <string name="phone_number">Phone Number</string>
    <string name="profile">Profile</string>
    <string name="sign_in1">Log in</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="reco_pass">Recover Password</string>
    <string name="reco_email">Recover Email</string>
    <string name="help">Help</string>
    <string name="about">About us</string>
    <string name="confidentiality_policy">Confidentiality Policy</string>
    <string name="terms_of_agreement">Terms of Agreement</string>
    <string name="logout">LOGOUT</string>
    <string name="invited">Invited</string>
    <string name="forget_password1">Forgot Password</string>
    <string name="send_your_email_id_to_recover_your_password">Send Your Email Id to Recover your Password</string>
    <string name="email_id1">Email</string>
    <string name="send">SEND</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="change_photo">Change Photo</string>
    <string name="first_name1">First Name</string>
    <string name="lastname1">Last Name</string>
    <string name="phone_num">Phone Number</string>
    <string name="update">UPDATE</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="firstNameEmptyError">Please enter first name</string>
    <string name="lastNameEmptyError">Please enter last name</string>
    <string name="phoneEmptyError">Please enter phone number</string>
    <string name="firstNameLengthError">first name is too short (minimum 3 characters)</string>
    <string name="lastNameLengthError">last name is too short (minimum 3 characters)</string>
    <string name="emailEmptyError">Please enter your email.</string>
    <string name="emailInvalidError">Please enter your email in this format you@youremail.com.</string>
    <string name="passEmptyError">Please enter your password.</string>
    <string name="passlenthError">Your password must be at least 8 characters long, one letter and one number.</string>
    <string name="passNumericError">Your password must be at least 1 numeric value.</string>
    <string name="mobEmptyError">Please enter your phone number</string>
    <string name="titleEmptyError">Please enter title</string>
    <string name="locationEmptyError">Please enter location</string>
    <string name="startDateEmptyError">Please select start date</string>
    <string name="description_option">Description (option)</string>
    <string name="done">Done</string>
    <string name="start_date"><![CDATA[Start Date & Time]]></string>
    <string name="end_date"><![CDATA[End Date & Time]]></string>
    <string name="guest_invited">Guest Invited</string>
    <string name="description">Description</string>
    <string name="option">(optional)</string>
    <string name="hoop_detail">Hoop Details</string>
    <string name="edit">Edit</string>
    <string name="cancel1">Cancel</string>
    <string name="share">Share</string>
    <string name="already">Already have an account ?</string>
    <string name="previously_created_hoop">Previously created hoop</string>
    <string name="_25_guests_invited">25 Guests Invited</string>
    <string name="recover_password">Recover Password</string>
    <string name="select_guest_circle"><![CDATA[Select Guest & Circle]]></string>
    <string name="search"><![CDATA[Search Guest & Circle..]]></string>
    <string name="hoop_in">Hoop In</string>
    <string name="hoop_out">Hoop Out</string>
    <string name="hoop_start_in">Hoop will start in</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="min">Min</string>
    <string name="hoop_edit">Edit Hoop</string>
    <string name="cancel_hoop">Cancel Hoop</string>
    <string name="share_hoop">Share Hoop</string>
    <string name="invite">Invite</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="enter_email">Please enter email</string>
    <string name="enter_phone_number">Phone number</string>
    <string name="enter_password">Enter password</string>
    <string name="under_in_development">Under In Development</string>
    <string name="invite_by_sms">Invite By Sms</string>
    <string name="clear">CLEAR</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="enter_your">Enter your</string>
    <string name="verification_code">Verification Code</string>
    <string name="verification_code1">verification code</string>
    <string name="sent_to">Sent to</string>
    <string name="please_enter_code">Please enter code</string>
    <string name="didn_t_get_a_code">Didn\'t get a code?</string>
    <string name="search_country">Search Country</string>
    <string name="select_country">Select Country</string>
    <string name="code">+1</string>
    <string name="add_memory">Add Memory</string>


</resources>
