<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">


            <RelativeLayout
                android:id="@+id/rl_hoopprofile"
                android:layout_width="@dimen/_123sdp"
                android:layout_height="@dimen/_123sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_30sdp">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="@dimen/_123sdp"
                    android:layout_height="@dimen/_122sdp"
                    android:src="@drawable/default_image" />

                <!--  <ImageView
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_centerInParent="true"
                      android:scaleType="fitXY" />-->


                <ImageView
                    android:id="@+id/upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    app:srcCompat="@drawable/ic_camera_ico" />


            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="vertical">


                <TextView
                    style="@style/RubikLightStyleSize12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/what" />


                <EditText
                    android:id="@+id/et_title"
                    style="@style/RubikLightStyleSize12"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/editlayout"
                    android:hint="@string/title"
                    android:inputType="text"
                    android:padding="@dimen/_5sdp" />

                <TextView
                    android:id="@+id/tv_titleerror"
                    style="@style/RubikRegularStyleSize10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/titleEmptyError"
                    android:textColor="@color/colorRedError"
                    android:visibility="gone" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">


                    <EditText
                        android:id="@+id/et_description"
                        style="@style/RubikLightStyleSize12"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_70sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:background="@drawable/editlayout"
                        android:gravity="start"
                        android:imeOptions="actionNext"
                        android:inputType="textMultiLine"
                        android:maxLines="5"
                        android:padding="@dimen/_5sdp" />


                </RelativeLayout>

                <TextView
                    style="@style/RubikLightStyleSize12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/where" />

                <EditText
                    android:id="@+id/et_location"
                    style="@style/RubikLightStyleSize12"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/editlayout"
                    android:hint="@string/location"
                    android:inputType="text"
                    android:padding="@dimen/_5sdp" />

                <TextView
                    android:id="@+id/tv_locationerror"
                    style="@style/RubikRegularStyleSize10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/locationEmptyError"
                    android:textColor="@color/colorRedError"
                    android:visibility="gone" />


                <TextView
                    style="@style/RubikLightStyleSize12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/when" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_weight="2"
                    android:orientation="horizontal">


                    <RelativeLayout
                        android:id="@+id/rl_startdate"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@drawable/greenline_rectangle"
                        tools:ignore="NestedWeights">


                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_7sdp"
                            android:layout_marginTop="@dimen/_25sdp"
                            android:tint="@color/colorGreen"
                            app:srcCompat="@drawable/ic_timetable" />


                        <TextView
                            style="@style/RubikLightStyleSize8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:text="@string/select_date_and_time"
                            android:textColor="@color/colorDarkGray" />

                        <TextView
                            android:id="@+id/tv_date"
                            style="@style/RubikRegularStyleSize7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_20sdp"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:layout_marginTop="@dimen/_30sdp"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:textColor="@color/colorBlack" />


                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rl_optiondate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_weight="1"
                        android:background="@drawable/orangeline_rectangle">


                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_7sdp"
                            android:layout_marginTop="@dimen/_25sdp"
                            android:tint="@color/colorDarkOrange"
                            app:srcCompat="@drawable/ic_timetable" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/RubikLightStyleSize8"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/end_date_amp_time_optional"
                                android:textColor="@color/colorGray" />

                            <TextView
                                style="@style/RubikRegularStyleSize7"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="@dimen/_2sdp"
                                android:text="@string/optional"
                                android:textColor="@color/colorGray" />


                        </LinearLayout>

                        <TextView
                            android:id="@+id/tv_optiondate"
                            style="@style/RubikRegularStyleSize7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/_5sdp"
                            android:layout_marginEnd="@dimen/_20sdp"
                            android:layout_marginStart="@dimen/_5sdp"
                            android:layout_marginTop="@dimen/_30sdp"
                            android:maxLines="2"
                            android:textColor="@color/colorBlack" />


                    </RelativeLayout>


                </LinearLayout>

                <TextView
                    android:id="@+id/tv_startdateerror"
                    style="@style/RubikRegularStyleSize10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/startDateEmptyError"
                    android:textColor="@color/colorRedError"
                    android:visibility="gone" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp">


                    <TextView
                        style="@style/RubikLightStyleSize12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/who" />

                    <TextView
                        android:id="@+id/tv_guest"
                        style="@style/RubikMediumStyleSize10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:text="@string/_25_guests_invited"
                        android:textColor="@color/colorGreen" />

                </RelativeLayout>


                <LinearLayout
                    android:id="@+id/ll_invited"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/_43sdp"
                            android:layout_height="@dimen/_43sdp"
                            android:src="@drawable/add_big"
                            tools:ignore="UnusedAttribute" />


                        <TextView
                            style="@style/RubikRegularStyleSize8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:text="@string/invited"
                            android:textColor="@color/colorBlack1" />


                    </LinearLayout>

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:orientation="horizontal"
                        android:scrollbars="none" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <Button
                        android:id="@+id/btn_pasthoop"
                        style="@style/RubikRegularStyle12"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_gravity="center"
                        android:layout_weight="2.1"
                        android:background="@drawable/btnboardergreen"
                        android:gravity="center"
                        android:text="@string/copy_from_past_hoops"
                        android:textColor="@color/colorGreen"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/btn_create"
                        style="@style/RubikRegularStyle12"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_4sdp"
                        android:layout_weight=".9"
                        android:background="@drawable/button"
                        android:gravity="center"
                        android:text="@string/create"
                        android:textColor="@color/colorWhite" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
