<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".activity.ui.authantication.forgetpassword.ForgetPasswordActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/rlheader"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@color/colorWhite">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                app:srcCompat="@drawable/ic_arrow_pointing_to_right" />

            <TextView
                style="@style/RubikMediumStyleSize14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/forget_password1"
                android:textColor="@color/colorBlack1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="@color/colorLight" />


        </RelativeLayout>


        <ImageView
            android:layout_width="@dimen/_49sdp"
            android:layout_height="@dimen/_41sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            app:srcCompat="@drawable/ic_password" />

        <TextView
            style="@style/RubikRegularStyleSize13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/send_your_email_id_to_recover_your_password"
            android:textColor="@color/colorGray" />


        <TextView
            style="@style/RubikLightStyleSize12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:text="@string/email_id1" />

        <EditText
            style="@style/RubikLightStyleSize12"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/editlayout"
            android:inputType="textEmailAddress"
            android:padding="@dimen/_5sdp" />


    </LinearLayout>


    <TextView
        style="@style/RubikRegularStyle14"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/app_btn"
        android:gravity="center"
        android:text="@string/send"
        android:textColor="@color/colorWhite" />


</RelativeLayout>